enabled scrolling for pay rent and fixed align center

--- a/Drayton-Harbor/src/app/header/header.component.scss
+++ b/Drayton-Harbor/src/app/header/header.component.scss
@@ -18,14 +18,6 @@ a {
   }
 }
 
-.navbar-nav {
-  align-items: center;
-
-  li {
-    width: fit-content;
-  }
-}
-
 .nav-link {
   color: $fontColor;
   font-weight: 600;
@@ -55,17 +47,17 @@ a {
   border: 1px solid $primary;
 }
 
-@media screen and (max-width: 900px) {
-  .display {
-    display: none;
-  }
+@media screen and (max-width: 991px) {
+  .navbar-nav {
+    align-items: center;
 
-  .nav-link {
-    text-align: center;
+    li {
+      width: fit-content;
+    }
   }
 }
 
-@media only screen and (max-width: 767px) and (max-height: 600px) {
+@media only screen and (max-width: 767px) and (max-height: 480px) {
   .navbar-nav-scroll {
     height: 200px;
     overflow-y: scroll;
