--- a/Drayton-Harbor/src/app/pay-rent/pay-rent.component.scss
+++ b/Drayton-Harbor/src/app/pay-rent/pay-rent.component.scss
@@ -21,6 +21,7 @@
       width: 100%;
       overflow: auto;
       min-width: 100%;
+      height: 500px;
     }
   }
 
@@ -73,10 +74,6 @@
 
     .padding-for-small-device {
       padding: 24px;
-    }
-
-    iframe {
-      min-height: 400px;
     }
 
     .scroll-wrapper {
